--- a/dashboard.html
+++ b/dashboard.html
@@ -39,8 +39,10 @@
         <tr>
           <th>Date</th>
           <th>Name</th>
+          <th>Name</th>
           <th>Time In</th>
           <th>Status</th>
+
         </tr>
       </thead>
       <tbody id="attendanceLog">
